--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
     "next": "15.3.0",
