add beach image

--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -31,10 +31,13 @@
     "id": 3,
     "title": "Turismo",
     "images": [
-      "/turismo1920x1080.webp"
+      "/turismo1920x1080.webp",
+     "/house-beach.webp"
     ],
        "mobileImg": [
-"/turismo1080x1350.webp"
+"/turismo1080x1350.webp",
+     "/house-beach.webp"
+
     ],
     "description": "Los módulos Legno Haus son perfectos para proyectos turísticos: cabañas, lodges, glampings o refugios.",
     "long_description": "Los módulos Legno Haus son perfectos para proyectos turísticos: cabañas, lodges, glampings o refugios. Nuestras construcciones son ideales para entornos naturales y turísticos por su bajo impacto ambiental, diseño personalizado y rápida instalación; son una solución para emprendimientos que buscan combinar estética, sustentabilidad y confort para sus huéspedes. Su estructura modular permite instalarse en terrenos complejos sin dañar el entorno, integrándose con el paisaje y adaptándose al estilo de tu propuesta ofreciendo confort, aislamiento térmico y una estética minimalista. Además, podés ampliarlos, replicarlos o incluso reubicarlos fácilmente a medida que crece tu demanda, sin frenar tu operación. En turismo, el tiempo de puesta en marcha y la experiencia del usuario son clave. Es una solución práctica, durable y adaptable, ideal para desarrollos turísticos en zonas rurales o naturales que buscan destacarse sin comprometer el entorno. En Legno Haus hacemos que tu emprendimiento esté listo para recibir huéspedes en tiempo récord, con diseño y confort que marcan la diferencia.",
